feat/users, implementação do serviço do usuario feita com sucesso.
