# src/server.js
@@ -3,12 +3,14 @@ import swaggerUi from 'swagger-ui-express';
 import swaggerDocument from '../swagger.json' assert { type: 'json' };
 import envoriment from './env/envoriment.js';
 import authRouter from './auth/auth.router.js';
+import usersRouter from './users/users.router.js';
 const app = express();
 
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(authRouter);
+app.use('/users', usersRouter);
 
 app.listen(envoriment.appPort, () => {
   console.log(
