# src/users/users.controller.js
@@ -1,0 +1,48 @@
+import { UserService } from './users.service.js';
+
+const getUsers = async (req, res) => {
+  try {
+    const users = await UserService.findAll();
+    return res.status(200).json(users);
+  } catch (error) {
+    return res.status(500).json({ message: error.message });
+  }
+};
+
+const getUserById = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const user = await UserService.findById(id);
+    return res.status(200).json(user);
+  } catch (error) {
+    return res.status(500).json({ message: error.message });
+  }
+};
+
+const updateUser = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const { name, email, document } = req.body;
+    const user = await UserService.updated(id, { name, email, document });
+    return res.status(200).json(user);
+  } catch (error) {
+    return res.status(500).json({ message: error.message });
+  }
+};
+
+const deleteUser = async (req, res) => {
+  try {
+    const { id } = req.params;
+    await UserService.remove(id);
+    return res.status(204).json();
+  } catch (error) {
+    return res.status(500).json({ message: error.message });
+  }
+};
+
+export const UsersController = {
+  getUsers,
+  getUserById,
+  updateUser,
+  deleteUser,
+};
